# Morgan

./: .cursorrules  .dockerignore  .env  .env.example  .gitignore  .gitleaksignore  .pre-commit-config.yaml  .secrets.baseline  .yamllint.yml  ALL_DONE.md  CI_CD_SETUP_SUMMARY.md  CLAUDE.md  CLI_DESIGN_INTENT.md  CLI_EXPLORATION_SUMMARY.md  CLI_INDEX.md  CLI_QUICK_REFERENCE.md  CODEBASE_REVIEW.md  CODEBASE_REVIEW_PLAN.md  COMPREHENSIVE_ANALYSIS_FINDINGS.md  COMPREHENSIVE_CODE_ANALYSIS.md  CSM_STREAMING_INTEGRATION.md  CSM_TTS_INTEGRATION.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPRECATION_NOTICE.md  DEVELOPMENT.md  DISTRIBUTED_SETUP_GUIDE.md  DOCUMENTATION.md  DOCUMENTATION_ISSUES_AND_RECOMMENDATIONS.md  DOCUMENTATION_SUMMARY.md  Dockerfile.base  Dockerfile.cuda-base  EMOTIONAL_INTEGRATION_GUIDE.md  EMOTION_DETECTION_REFACTOR_SUMMARY.md  ERROR_HANDLING_IMPROVEMENTS.md  FIXES_APPLIED.md  FIXES_SUMMARY.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  JARVIS_SETUP_GUIDE.md  (+65 more)
morgan-cli/: .gitignore  README.md  pyproject.toml
morgan-cli/morgan_cli/: __init__.py  __main__.py  cli.py  client.py  config.py  ui.py
morgan-cli/tests/: __init__.py  test_cli_properties.py  test_client_properties.py  test_config.py  test_ui_properties.py
morgan-rag/: .env.development  .env.example  .env.production  CLI_INTERFACES_IMPLEMENTATION.md  CLI_INTERFACES_README.md  CONFIGURATION.md  DEPRECATED.md  Dockerfile  Makefile  QUICK_REFERENCE.md  QUICK_START.md  RAG_REFACTORING_SUMMARY.md  README.md  REFACTORING_COMPLETE.md  REFACTOR_COMPLETE.md  TASK_1_3_IMPLEMENTATION_SUMMARY.md  create_env_file.py  create_sample_data.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  import_error.txt  pyproject.toml  requirements-core.txt  requirements-latest.txt  requirements.txt  setup.py  setup_collections.py  start_and_test.ps1  start_morgan.bat  test_cache_implementation.py  test_cache_simple.py  test_expertise_modules.py  test_llm_connection.py  test_setup.py  test_storage_modules.py
morgan-rag/config/: distributed.yaml  hosts.example.json  mypy.ini  pytest.ini  ruff.toml
morgan-rag/docs/: ARCHITECTURE.md  CORE_REFACTOR_SUMMARY.md  MIGRATION_GUIDE.md  MODULE_CLEANUP_SUMMARY.md  README.md  REFACTORING_SUMMARY.md  TASK_8_2_IMPLEMENTATION_SUMMARY.md  background_processing.md  error_handling.md  multimodal_processing.md  system_integration_summary.md
morgan-rag/examples/: background_processing_demo.py  batch_optimization_demo.py  batch_optimization_simple_demo.py  cli_demo.py  companion_memory_search_demo.py  companion_relationship_demo.py  companion_storage_demo.py  complete_pipeline_example.py  complete_system_integration_demo.py  core_assistant_example.py  emotional_intelligence_demo.py  enhanced_search_integration_demo.py  enhanced_vector_db_demo.py  error_handling_demo.py  git_hash_demo.py  intelligent_cache_demo.py  memory_processor_demo.py  migration_demo.py  monitoring_demo.py  multi_stage_search_demo.py  multimodal_example.py  remote_batch_optimization_demo.py  rrf_demo.py  simple_integration_demo.py  web_api_demo.py  websocket_demo.html
morgan-rag/monitoring/: prometheus.yml
morgan-rag/morgan/: __init__.py  __main__.py  exceptions.py
morgan-rag/morgan_v2/: __init__.py
morgan-rag/nginx/: nginx.conf
morgan-rag/scripts/: backup_qdrant.py  backup_qdrant.sh  fix_searchresult_access.py  health_check.py  import_conversations.py  import_conversations_batch.py  import_conversations_enhanced.py  import_conversations_multiserver.py  import_conversations_windows.py  import_venv.py  migrate_knowledge_base.py  quick_test.py  restore_qdrant.py  run_background_service.py  run_morgan.py  setup_and_test.py  test_complete_pipeline.py
morgan-rag/tests/: __init__.py  test_advanced_reranking.py  test_agents.py  test_app_state.py  test_background_processing.py  test_batch_optimization.py  test_channels.py  test_communication_integration.py  test_compaction.py  test_companion_relationship_manager.py  test_companion_storage.py  test_comparison.py  test_content_preview.py  test_contrastive_clustering.py  test_conversation_integration.py  test_core_integration.py  test_embedding_service_refactor.py  test_emotion_detection.py  test_emotional_intelligence.py  test_empathy_generator.py  test_empathy_mirror.py  test_empathy_support.py  test_empathy_tone.py  test_empathy_validator.py  test_enhanced_assistant.py  test_enhanced_memory_integration.py  test_error_handling.py  test_feature_flags.py  test_force_remote.py  test_git_hash_tracker.py  test_habits_integration.py  test_hierarchical_embeddings.py  test_hierarchical_integration.py  test_hooks.py  test_intelligent_cache.py  test_learning_adaptation.py  test_learning_engine.py  test_learning_feedback.py  test_learning_integration.py  test_learning_patterns.py  (+27 more)
morgan-server/: .env.example  .gitignore  Dockerfile  MIGRATION_COMPLETE.md  MIGRATION_STATUS.md  README.md  VALIDATION_GUIDE.md  config.example.yaml  pyproject.toml  quick_validate.py  validate_production_readiness.py
morgan-server/docs/: API.md  CHANGELOG.md  CONFIGURATION.md  DEPLOYMENT.md  EMBEDDING_CONFIGURATION.md  EMPATHIC_ENGINE.md  LOGGING_SYSTEM.md  README.md  SESSION_MANAGEMENT.md
morgan-server/examples/: app_factory_example.py  logging_example.py  session_management_example.py
morgan-server/morgan_server/: __init__.py  __main__.py  app.py  assistant.py  config.py  health.py  logging_config.py  middleware.py  session.py
morgan-server/tests/: README.md  __init__.py  test_api_models_properties.py  test_app_properties.py  test_assistant_integration.py  test_chat_routes.py  test_config.py  test_container_properties.py  test_document_processing.py  test_health_properties.py  test_health_routes.py  test_integration_e2e.py  test_knowledge_routes.py  test_logging_integration.py  test_logging_properties.py  test_memory_routes.py  test_metrics_properties.py  test_middleware_properties.py  test_new_endpoints.py  test_performance_properties.py  test_profile_routes.py  test_relationship_management.py  test_session_management.py  test_session_properties.py  (+1 more)
(+694 files in other folders)
