[project]
name = "morgan"
version = "0.2.0"
description = "Modern AI assistant with Ollama, CUDA 13 optimization, and microservices architecture"
authors = [{ name = "Morgan AI Team" }]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "aiohttp>=3.9.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "structlog>=23.2.0",
    "psutil>=5.9.0",
    "redis>=5.0.0",
]

[dependency-groups]
# LLM service dependencies (OpenAI-compatible client for Ollama)
llm = [
    "openai>=1.3.0",
]

# TTS service dependencies (Coqui TTS with CUDA support)
tts = [
    "TTS>=0.13.0",
    "soundfile>=0.12.0",
    "librosa>=0.10.0",
    "pydub>=0.25.1",
    "torch>=2.1.0",
    "torchaudio>=2.1.0",
    "torchvision>=0.16.0",
]

# STT service dependencies (Faster Whisper with CUDA support)
stt = [
    "faster-whisper>=1.0.0",
    "soundfile>=0.12.0",
    "librosa>=0.10.0",
    "pydub>=0.25.1",
    "torch>=2.1.0",
    "torchaudio>=2.1.0",
    "silero-vad>=0.1.0",
]

# VAD service dependencies (Silero VAD optimized)
vad = [
    "silero-vad>=0.1.0",
    "numpy>=1.24.0",
    "torch>=2.1.0",
]

# Development dependencies
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

# Configure UV to use Nexus PyPI proxy
[tool.uv]
index-url = "https://nexus.in.lazarev.cloud/repository/pypi-proxy/simple"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
