[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "morgan-rag"
dynamic = ["version", "dependencies"]
description = "Morgan RAG - Human-first AI assistant with emotional intelligence and background automation."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Morgan RAG Team" }]
license = { text = "Proprietary" }
keywords = ["rag", "assistant", "cli", "fastapi", "qdrant", "emotional-intelligence"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
]

[project.scripts]
morgan = "morgan.cli.app:main"
morgan-distributed = "morgan.cli.distributed_cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["morgan*"]

[tool.setuptools.package-data]
morgan = [
  "interfaces/templates/*.html",
  "interfaces/static/css/*.css",
  "interfaces/static/js/*.js",
]

[tool.setuptools.dynamic]
version = {attr = "morgan.__version__"}
dependencies = {file = ["requirements.txt"]}

[tool.black]
line-length = 88
target-version = ['py311', 'py312', 'py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

