[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "morgan-server"
version = "0.1.0"
description = "Morgan AI Assistant Server - Personal assistant with empathic and knowledge engines"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Morgan Team"}
]
keywords = ["ai", "assistant", "rag", "empathy", "personal-assistant"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "qdrant-client>=1.7.0",
    "sentence-transformers>=2.3.0",
    "torch>=2.1.0",
    "aiohttp>=3.9.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    "prometheus-client>=0.19.0",
    "pyyaml>=6.0",
    "diskcache>=5.6.0",
    # Document processing
    "PyPDF2>=3.0.1",
    "pdfplumber>=0.9.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "html2text>=2020.1.16",
    "markdown>=3.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-rerunfailures>=12.0",
    "hypothesis>=6.92.0",
    "httpx>=0.26.0",
    "black>=23.12.0",
    "ruff>=0.1.9",
    "mypy>=1.8.0",
]

[project.scripts]
morgan-server = "morgan_server.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["morgan_server*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "flaky_docker: marks tests as flaky due to Docker timing issues (will be rerun on failure)",
]
